style: dial back mobile footer title font size to prevent wrapping 'A' to new line

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -148,7 +148,7 @@
   }
 
   .footer-title {
-    font-size: 32vw;
+    font-size: 27vw;
     letter-spacing: -0.02em;
     flex-wrap: wrap;
     line-height: 0.8;
